fix footer positioning + lines svg stretch

--- a/next-app/styles/Home.module.css
+++ b/next-app/styles/Home.module.css
@@ -3,7 +3,6 @@
   top: 100px;
   display: block;
   width: 100%;
-  height: 100%;
   z-index: 0;
 }
 
